Update favicon and clean up unused assets

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sweproject-vite",
+  "name": "Regents Summer Camp Registration System",
   "private": true,
   "version": "0.0.0",
   "type": "module",
